--- a/inauguralproject/inauguralproject.ipynb
+++ b/inauguralproject/inauguralproject.ipynb
@@ -147,7 +147,17 @@
     "#Question 2\n",
     "#2.a computation of errors in the market clearning condition \n",
     "eps1,eps2,p1= model.check_market_clearing()\n",
-    "print(f\"The price that minimizes the market clearing error is:{p1[np.argmin(abs(eps1))]:.4f}\")\n"
+    "print(f\"The price that minimizes the market clearing error is:{p1[np.argmin(abs(eps1))]:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2.b plot these errors:\n",
+    "model.plot_errors()"
    ]
   },
   {
@@ -173,15 +183,27 @@
     }
    ],
    "source": [
+    "#Question 3\n",
+    "\n",
     "#3.a Computation of the market clearing price\n",
-    "p1_equilibrium,x1a_equilibrium,x2a_equilibrium,u_equilibrium= model.market_clearing_price_continuous()\n",
+    "p1_equilibrium,x1a_equilibrium,x2a_equilibrium,u_equilibrium,results= model.market_clearing_price()\n",
     "\n",
     "#3.b Print this price.\n",
-    "print(f'The market clearing price is p1 = {p1_equilibrium}')\n",
+    "print(f'The market clearing price is p1 = {p1_equilibrium:.4f}')\n",
     "\n",
     "#3.c Print the market clearing allocation and the utility of the market clearing allocation.\n",
-    "print(f'The market clearing allocation is x1a = {x1a_equilibrium} and x2a = {x2a_equilibrium}')\n",
-    "print(f'The utility of the market clearing allocation is u = {u_equilibrium}')"
+    "print(f'The market clearing allocation is x1a = {x1a_equilibrium :.4f} and x2a = {x2a_equilibrium :.4f}')\n",
+    "print(f'The utility of the market clearing allocation is u = {u_equilibrium:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2.b plot these errors:\n",
+    "model.plot_market_clearing_errors()"
    ]
   },
   {
@@ -217,22 +239,18 @@
     }
    ],
    "source": [
+    "#Question 4.a\n",
+    "\n",
     "#Computation of the price that maximize the utility of agent A within the predefined subset of prices\n",
     "p1_4a_optimal,p1_nonnegative,u,u_4a_optimal,x1a_4a_optimal,x2a_4a_optimal= model.max_utility_price_discrete()\n",
     "\n",
     "#Print this price.\n",
-    "print(f'The price that maximizes the utility of agent 1 is p1 = {p1_4a_optimal}')\n",
-    "print(f'The maximal utility of agent A is u = {u_4a_optimal}')\n",
-    "print(f'The allocation of agent A that maximizes their utility is x1a = {x1a_4a_optimal} and x2a = {x2a_4a_optimal}')\n",
+    "print(f'The price that maximizes the utility of agent 1 is p1 = {p1_4a_optimal:.4f}')\n",
+    "print(f'The maximal utility of agent A is u = {u_4a_optimal:.4f}')\n",
+    "print(f'The allocation of agent A that maximizes their utility is x1a = {x1a_4a_optimal:.4f} and x2a = {x2a_4a_optimal:.4f}')\n",
     "\n",
     "#print the utility of agent A for the predefined subset of prices(only those such that demands are nonnegative)\n",
-    "plt.plot(p1_nonnegative,u, label = \"utility\")\n",
-    "plt.scatter(p1_4a_optimal,u_4a_optimal, label = \"maximal utility\", color = 'red')\n",
-    "plt.xlabel('p1')\n",
-    "plt.ylabel('utility')\n",
-    "plt.title('utility')\n",
-    "plt.legend()\n",
-    "plt.show()"
+    "model.plot_utility_nonnegative_prices()"
    ]
   },
   {
@@ -258,15 +276,16 @@
     }
    ],
    "source": [
+    "#Question 4.b\n",
+    "\n",
     "#Computation of the price that maximizes the utility of agent A within positive prices\n",
     "p1_4b_optimal,x1a_4b_optimal,x2a_4b_optimal,u_4b_optimal= model.max_utility_price_continuous()\n",
     "\n",
     "#Print this price.\n",
-    "print(f'The price that maximize the utility of agent A is p1 = {p1_4b_optimal}')\n",
-    "\n",
+    "print(f'The price that maximize the utility of agent A is p1 = {p1_4b_optimal:.4f}')\n",
     "#Print the allocation of agent A that maximizes the utility and the utility of agent A.\n",
-    "print(f'The allocation of agent 1 that maximizes the utility is x1a = {x1a_4b_optimal} and x2a = {x2a_4b_optimal}')\n",
-    "print(f'The maximal utility of agent 1 is u = {u_4b_optimal}')"
+    "print(f'The allocation of agent 1 that maximizes the utility is x1a = {x1a_4b_optimal:.4f} and x2a = {x2a_4b_optimal:.4f}')\n",
+    "print(f'The maximal utility of agent 1 is u = {u_4b_optimal:.4f}')"
    ]
   },
   {
@@ -291,12 +310,14 @@
     }
    ],
    "source": [
+    "# Question 5.a\n",
+    "\n",
     "#Computation of the optimal allocations when A is the market maker and the choice set is restricted to C\n",
     "x1a_5a_optimal,x2a_5a_optimal,u_5a_optimal= model.market_maker_A_restrictedtoC()\n",
     "\n",
     "#Print these allocations and the utility of agent A.\n",
-    "print(f'The optimal allocation is: x1a = {x1a_5a_optimal} and x2a = {x2a_5a_optimal}')\n",
-    "print(f'The utility of agent A is u = {u_5a_optimal}')"
+    "print(f'The optimal allocation is: x1a = {x1a_5a_optimal:.4f} and x2a = {x2a_5a_optimal:.4f}')\n",
+    "print(f'The utility of agent A is u = {u_5a_optimal:.4f}')"
    ]
   },
   {
@@ -321,19 +342,21 @@
     }
    ],
    "source": [
+    "#Question 5.b\n",
+    "\n",
     "#Computation of the optimal allocations when A is the market maker and the choice set is such that B is at least as good as with the initial endowment and the allocations are within 0 and 1\n",
     "x1a_5b_optimal,x2a_5b_optimal, u_5b_optimal= model.market_maker_A_unrestrictedtoC()\n",
     "\n",
     "#Print these allocations and the utility of agent A.\n",
-    "print(f'The optimal allocation is: x1a = {x1a_5b_optimal} and x2a = {x2a_5b_optimal}')\n",
-    "print(f'The utility of agent 1 is u = {u_5b_optimal}')  "
+    "print(f'The optimal allocation is: x1a = {x1a_5b_optimal:.4f} and x2a = {x2a_5b_optimal:.4f}')\n",
+    "print(f'The utility of agent 1 is u = {u_5b_optimal:.4f}')  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.b. <a id='toc5_b'></a>[allocation if no further restrictions are imposed](#toc0_)"
+    "### 6.a. <a id='toc6_a'></a>[Find the resulting allocation](#toc0_)"
    ]
   },
   {
@@ -351,12 +374,14 @@
     }
    ],
    "source": [
+    "#Question 6.a\n",
+    "\n",
     "#Computation of the optimal allocations assuming that A’s and B’s consumption are chosen by a utilitarian social planner to maximize aggregate utility\n",
     "x1a_social_optimum,x2a_social_optimum,u_social_a_optimal= model.social_planner_optimum()\n",
     "\n",
     "#Print these allocations.\n",
-    "print(f'The optimal allocation is: x1a = {x1a_social_optimum} and x2a = {x2a_social_optimum}')\n",
-    "print(f'The social optimal utility of agent A is u = {u_social_a_optimal}')"
+    "print(f'The optimal allocation is: x1a = {x1a_social_optimum:.4f} and x2a = {x2a_social_optimum:.4f}')\n",
+    "print(f'The social optimal utility of agent A is u = {u_social_a_optimal:.4f}')"
    ]
   },
   {
