--- a/inauguralproject/inauguralproject.ipynb
+++ b/inauguralproject/inauguralproject.ipynb
@@ -388,19 +388,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 6.b:**\n",
+    "### 6.b. <a id='toc6_b'></a>[Illustrate and compare with your results in questions 3)-5)](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 6.b**\n",
     "\n",
-    "Price at 3a is a market clearing price. This price hasn't been computed through utility maximisation but imposing demand to be equal to supply. Note that since Walras' law applies, it is enough to impose the equilibrium condition only for one good.\n",
+    "Price at 3a is a market clearing price. This price hasn't been computed through utility maximisation but imposing demand to be equal to supply. \n",
+    "Note that since Walras' law applies, it is enough to impose the equilibrium condition only for one good.\n",
     "\n",
-    "In point 4a, the equilibrium price is computed by maximizing the utility of agent A. The resulting utility is higher with respect to the utility obtained in 3a. This is due to the fact that the price is chosen to maximize the utility of agent A. \n",
-    "In 3 both agents are simultaneously considered to find the equilibrium in both market of good 1 and market of good 2. This way agent A is assigned a small amount of good 1 -which is agent A least favourite- and a higher amount of good 2 -the most favourite. \n",
+    "In point 4a, the equilibrium price is computed by maximizing the utility of agent A. The resulting utility is higher with respect to the utility obtained in 3a. This is due to the fact that the price is chosen to maximize the utility of agent A.  In 3 both agents are simultaneously considered to find the equilibrium in both market of good 1 and market of good 2. This way agent A is assigned a small amount of good 1 -which is agent A least favourite- and a higher amount of good 2 -the most favourite. \n",
     "On the other hand, in 4a agent A chooses only for themselves; thus, agent A chooses an higher quantity of good 2 than of good 1 but a higher quantity of good 1 compared to Point 3. Indeed, allocation 4a implies a higher price of good 1.\n",
     "\n",
     "In 4b, when prices are continuous and positive, the utility is slighlty higher than in 4a and higher than in 3. This is due to the fact that the price that maximizes agent A's utility can be chosen from a wider set of prices. Consequently, the price that maximises agent A's utility is higher. \n",
     "\n",
-    "In 5a, agent A is the market maker. Instead of choosing a price that maximises utility, they choose an allocation constrained within a set that not only considers A's preferences but also B's as it requires B's utility to be at least as good in the optimal allocation as it would be in their initial endowment. As a result, now A chooses a higher quantity of good 2 compared to Points 4a and 4b. Indeed, this time, they have utility of B's as a constraint. Resulting from this framework, A's utility is higher than at previous points. \n",
-    "Furthermore, utility in 5a is higher than in 5b. This is due to the contraints imposed in 5a which are wider than those in 5b. \n",
-    "However, the increment in utility is only marginal, as the two sets only differ for 5a imposes x1a and x2a to belong yo a discrete choice set (that defined in C), whereas 5b loosens the constraint allowing x1a and x2a to belong to the continuos set [0,1].\n",
+    "In 5a, agent A is the market maker. Instead of choosing a price that maximises utility, they choose an allocation constrained within a set that not only considers A's preferences but also B's as it requires B's utility to be at least as good in the optimal allocation as it would be in their initial endowment.\n",
+    "As a result, now A chooses a higher quantity of good 2 compared to Points 4a and 4b. Indeed, this time, they have utility of B's as a constraint. Resulting from this framework, A's utility is higher than at previous points. Furthermore, utility in 5a is higher than in 5b. This is due to the contraints imposed in 5a which are wider than those in 5b. However, the increment in utility is only marginal, as the two sets only differ for 5a imposes x1a and x2a to belong yo a discrete choice set (that defined in C), whereas 5b loosens the constraint allowing x1a and x2a to belong to the continuos set [0,1].\n",
     "\n",
     "Finally, in 6a, A is no longer the market maker and utility is maximised by a social planner who considers the social aggregate utility. Accordingly, utility of A is lower than in Previous points, as the social planner takes into account their utility together with that of B, maximizing them jointly. \n",
     "In line with both agents' preferences, the optimal allocation chosen by the social planner consist in a higher quantity of good 2 than of good 1 for A.   \n"
@@ -423,51 +429,23 @@
     }
    ],
    "source": [
-    "# a. parameters\n",
-    "w1bar = 1.0\n",
-    "w2bar = 1.0\n",
-    "\n",
-    "# b. figure set up\n",
-    "fig = plt.figure(frameon=True,figsize=(6,6), dpi=100)\n",
-    "ax_A = fig.add_subplot(1, 1, 1)\n",
-    "\n",
-    "ax_A.set_xlabel(\"$x_1^A$\")\n",
-    "ax_A.set_ylabel(\"$x_2^A$\")\n",
-    "\n",
-    "temp = ax_A.twinx()\n",
-    "temp.set_ylabel(\"$x_2^B$\")\n",
-    "ax_B = temp.twiny()\n",
-    "ax_B.set_xlabel(\"$x_1^B$\")\n",
-    "ax_B.invert_xaxis()\n",
-    "ax_B.invert_yaxis()\n",
-    "\n",
-    "# A\n",
-    "ax_A.scatter(x1a_equilibrium,x2a_equilibrium,marker='s',color='black',label='3')\n",
-    "ax_A.scatter(x1a_4a_optimal,x2a_4a_optimal,marker='s',color='red',label='4a')\n",
-    "ax_A.scatter(x1a_4b_optimal,x2a_4b_optimal,marker='s',color='yellow',label='4b')\n",
-    "ax_A.scatter(x1a_5a_optimal,x2a_5a_optimal,marker='s',color='green',label='5a')\n",
-    "ax_A.scatter(x1a_5b_optimal,x2a_5b_optimal,marker='s',color='blue',label='5b')\n",
-    "ax_A.scatter(x1a_social_optimum,x2a_social_optimum,marker='s',color='purple',label='6a')\n",
-    "ax_A.scatter(x1a_pareto_optimal,x2a_pareto_optimal,marker='s',color='blue',label='Pareto allocations',alpha=0.09)\n",
-    "#c. limits\n",
-    "ax_A.plot([0,w1bar],[0,0],lw=2,color='black')\n",
-    "ax_A.plot([0,w1bar],[w2bar,w2bar],lw=2,color='black')\n",
-    "ax_A.plot([0,0],[0,w2bar],lw=2,color='black')\n",
-    "ax_A.plot([w1bar,w1bar],[0,w2bar],lw=2,color='black')\n",
-    "\n",
-    "ax_A.set_xlim([-0.1, w1bar + 0.1])\n",
-    "ax_A.set_ylim([-0.1, w2bar + 0.1])    \n",
-    "ax_B.set_xlim([w1bar + 0.1, -0.1])\n",
-    "ax_B.set_ylim([w2bar + 0.1, -0.1])\n",
-    "\n",
-    "ax_A.legend(frameon=True,loc='upper right',bbox_to_anchor=(1.6,1.0));"
+    "#b. Plot the Edgeworth box diagram with all the pareto optimal allocations \n",
+    "model.plot_edgeworth_box_all()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 7 and 8: Edgeworth box**"
+    "Pros and cons of the various allocations: \n",
+    "All of the various allocations is within the pareto allocations - This means that no matter what allocation is \"chosen\", both player A and B is at least as well off as they were, when consuming their endowments."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7-8.a. <a id='toc8_a'></a>[The market equilibrium allocation for each ωA ∈ W](#toc0_)"
    ]
   },
   {
@@ -487,41 +465,9 @@
     }
    ],
    "source": [
-    "#a. Preliminaries\n",
-    "p1_edg,x1_edg,x2_edg = model.edgeworth_box()\n",
-    "\n",
-    "w1bar = 1.0\n",
-    "w2bar = 1.0\n",
-    "\n",
-    "# b. Figure set up\n",
-    "fig = plt.figure(frameon=True,figsize=(6,6), dpi=100)\n",
-    "ax_A = fig.add_subplot(1, 1, 1)\n",
-    "\n",
-    "ax_A.set_xlabel(\"$x_1^A$\")\n",
-    "ax_A.set_ylabel(\"$x_2^A$\")\n",
-    "\n",
-    "temp = ax_A.twinx()\n",
-    "temp.set_ylabel(\"$x_2^B$\")\n",
-    "ax_B = temp.twiny()\n",
-    "ax_B.set_xlabel(\"$x_1^B$\")\n",
-    "ax_B.invert_xaxis()\n",
-    "ax_B.invert_yaxis()\n",
-    "\n",
-    "# A\n",
-    "ax_A.scatter(x1_edg,x2_edg,marker='s',color='black',label='allocations')\n",
-    "\n",
-    "#c. Limits\n",
-    "ax_A.plot([0,w1bar],[0,0],lw=2,color='black')\n",
-    "ax_A.plot([0,w1bar],[w2bar,w2bar],lw=2,color='black')\n",
-    "ax_A.plot([0,0],[0,w2bar],lw=2,color='black')\n",
-    "ax_A.plot([w1bar,w1bar],[0,w2bar],lw=2,color='black')\n",
-    "\n",
-    "ax_A.set_xlim([-0.1, w1bar + 0.1])\n",
-    "ax_A.set_ylim([-0.1, w2bar + 0.1])    \n",
-    "ax_B.set_xlim([w1bar + 0.1, -0.1])\n",
-    "ax_B.set_ylim([w2bar + 0.1, -0.1])\n",
-    "\n",
-    "ax_A.legend(frameon=True,loc='upper right',bbox_to_anchor=(1.6,1.0));"
+    "#Question 7 and 8\n",
+    "p1_edg,x1_edg,x2_edg = model.equilibrium_allocation_random()\n",
+    "model.random_edgeworth_box()"
    ]
   }
  ],
