--- a/modelproject/EntryExitModel.ipynb
+++ b/modelproject/EntryExitModel.ipynb
@@ -41,13 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "initializing the model:\n",
       "calling .setup()\n"
      ]
@@ -115,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +129,7 @@
        "-F + q_e*(a - b*(q_e + q_m))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +159,7 @@
        "(a - b*q_m)/(2*b)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +190,7 @@
        "-F + (a - b*q_m)**2/(4*b)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +220,7 @@
        "(a*b - 2*sqrt(F*b**3))/b**2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +251,7 @@
        "Piecewise((-F + q_m*(a - b*(q_e + q_m)), q_m < (a*b - 2*sqrt(F*b**3))/b**2), (-F + q_m*(a - b*q_m), True))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +298,7 @@
        "F >= a**2/(16*b)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +328,7 @@
        "(a**2/(16*b) > F) & (a**2*(3 - 2*sqrt(2))/(32*b) <= F)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +358,7 @@
        "(0 < F) & (a**2*(3 - 2*sqrt(2))/(32*b) > F)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +571,7 @@
       "Optimal quantity for the incumbent firm: 2.9999999900121366\n",
       "Equilibium profit for the incumbent firm: 5.000000009987863\n",
       "Optimal quantity for the entrant firm: 0\n",
-      "Equilibium profit for the entrant firm: -1.0\n",
+      "The entrant firm does not enter the market\n",
       "The threshold quantity is: 2.9999999998943863\n"
      ]
     }
@@ -589,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +601,7 @@
       "Optimal quantity for the incumbent firm: 2.999999990144386\n",
       "Equilibium profit for the incumbent firm: 5.000000009855614\n",
       "Optimal quantity for the entrant firm: 0\n",
-      "Equilibium profit for the entrant firm: -1.0\n",
+      "The entrant firm does not enter the market\n",
       "The threshold quantity is: 2.9999999998943863\n"
      ]
     }
@@ -618,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +630,7 @@
       "Optimal quantity for the incumbent firm: 2.499999999999999\n",
       "Equilibium profit for the incumbent firm: 3.75\n",
       "Optimal quantity for the entrant firm: 0\n",
-      "Equilibium profit for the entrant firm: -2.5\n",
+      "The entrant firm does not enter the market\n",
       "The threshold quantity is: 2.8\n"
      ]
     }
